--- a/src/main/resources/templates/task/taskUpdate.html
+++ b/src/main/resources/templates/task/taskUpdate.html
@@ -19,9 +19,9 @@
               <div class="mt-4  small">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4" th:text="|Edit ${task.taskUpdate.getName()} task|"></h1>
+                    <h1 class="h4 text-gray-900 mb-4" th:text="|Edit ${taskToUpdate.getName()} task|"></h1>
                   </div>
-                  <form class="user" th:action="@{/tasks/update/{id}(id=${task.taskUpdate.id})}" method="post" th:object="${task}">
+                  <form class="user" th:action="@{/tasks/update/{id}(id=${taskToUpdate.id})}" method="post" th:object="${taskToUpdate}">
                     <div class="form-group">
                       <label for="exampleInputName" class="form-label">Name</label>
                       <input
@@ -29,7 +29,8 @@
                              class="form-control"
                              name="name"
                              id="exampleInputName" aria-describedby="emailHelp"
-                             placeholder="Enter task name..." th:value="${task.taskUpdate.getName()}">
+                             placeholder="Enter task name..." th:value="${taskToUpdate.getName()}">
+                      <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="alert alert-danger" role="alert"/>
                     </div>
 
                     <div class="form-group">
@@ -40,9 +41,9 @@
                                 id="exampleInputDescription"
                                 name="description"
                                 placeholder="description"
-                                th:text="${task.taskUpdate.getDescription()}">
-
+                                th:text="${taskToUpdate.getDescription()}">
                         </textarea>
+                      <div th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="alert alert-danger" role="alert"/>
                       </p>
                     </div>
 
@@ -55,13 +56,14 @@
                               id="inputDatalist"
                               name="urgency"
                               placeholder="Type to search urgency"
-                              th:value="${task.taskUpdate.getUrgency()}">
+                              th:value="${taskToUpdate.getUrgency()}">
 
                       <datalist id="urgencyListOptions" >
-                        <th:block th:each="urgency: ${task.data.urgencyList}">
+                        <th:block th:each="urgency: ${taskToUpdate.data.urgencyList}">
                           <option th:value="${urgency.name()}"></option>
                         </th:block>
                       </datalist>
+                      <div th:if="${#fields.hasErrors('urgency')}" th:errors="*{urgency}" class="alert alert-danger" role="alert"/>
                     </div>
 
                     <div class="form-group">
@@ -72,20 +74,25 @@
                               id="inputTaskQueueList"
                               name="queueName"
                               placeholder="Type to search urgency"
-                              th:value="${task.taskUpdate.getQueueName()}"
+                              th:value="${taskToUpdate.getQueueName()}"
                       >
                       <datalist id="taskQueueListOptions" >
-                        <th:block th:each="taskQueue: ${task.data.queueNamesList}">
+                        <th:block th:each="taskQueue: ${taskToUpdate.data.queueNamesList}">
                           <option th:value="${taskQueue}"></option>
                         </th:block>
                       </datalist>
+                      <div th:if="${#fields.hasErrors('queueName')}" th:errors="*{queueName}" class="alert alert-danger" role="alert"/>
                     </div>
 
                     <hr>
 
                     <div class="row justify-content-around">
+                      <div th:if="${#fields.hasErrors('status')}" th:errors="*{status}" class="alert alert-danger" role="alert"/>
                       <button  type="submit" class="btn btn-primary col-xl-4 col-md-6 mb-5">Edit</button>
-                      <a> <div class="btn btn-danger  col-xl-4 col-md-6 mb-5" ><a>delete</a> </div></a>
+
+                      <div class="btn btn-danger  col-xl-4 col-md-6 mb-5 ">
+                        <a class="text-white" th:href="@{/tasks/delete/{id}(id=${taskToUpdate.id})}">Delete</a>
+                      </div>
                     </div>
                   </form>
                 </div>
