--- a/src/main/resources/templates/taskQueue/taskQueueUpdate.html
+++ b/src/main/resources/templates/taskQueue/taskQueueUpdate.html
@@ -19,35 +19,59 @@
                             <div class="mt-4  small">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4" th:text="|Edit ${taskQueueToUpdate.getName()} task queue|"></h1>
+                                        <h1 class="h4 text-gray-900 mb-4" th:text="|Edit ${queue.getName()} task queue|"></h1>
                                     </div>
-                                    <form class="user" th:action="@{/taskQueues/update/{id}(id=${taskQueueToUpdate.id})}" method="post" th:object="${departmentToUpdate}">
+                                    <form class="user" th:action="@{/taskQueues/update/{id}(id=${queue.id})}" method="post" th:object="${queue}">
                                         <div class="form-group">
                                             <label for="exampleInputName" class="form-label">Name</label>
                                             <input type="text" class="form-control"
                                                    name="name"
                                                    id="exampleInputName" aria-describedby="emailHelp"
-                                                   placeholder="Enter task queue name..." th:value="${taskQueueToUpdate.getName()}">
+                                                   placeholder="Enter task queue name..."
+                                                   th:value="${queue.name != null}? ${queue.name} : ''">
+                                                   <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="alert alert-danger" role="alert"/>
                                         </div>
 
                                         <div class="form-group">
                                             <label for="exampleInputDescription" class="form-label">Description</label>
-                                            <p><textarea class="form-control" id="exampleInputDescription" name="description" placeholder="description" th:text="${taskQueueToUpdate.getDescription()}"></textarea></p>
+                                            <p>
+                                                <textarea
+                                                        class="form-control"
+                                                        id="exampleInputDescription"
+                                                        name="description"
+                                                        placeholder="description"
+                                                        th:text="${queue.getDescription() != null}? ${queue.getDescription()} : ''">
+
+                                                </textarea></p>
+                                                <div th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="alert alert-danger" role="alert"/>
                                         </div>
 
                                         <div class="form-group">
-                                            <label for="exampleInputLogin" class="form-label">Login head of department</label>
-                                            <input type="text" class="form-control"
-                                                   id="exampleInputLogin" placeholder="description" name="departmentName" th:value="${taskQueueToUpdate.getDepartmentName()}" value="Empty">
+                                            <label for="exampleInputLogin" class="form-label">Department name</label>
+                                            <input
+                                                    type="text"
+                                                    class="form-control"
+                                                    id="exampleInputLogin"
+                                                    placeholder="Department name"
+                                                    name="departmentName"
+                                                    value="Empty"
+                                                    th:value="${queue.departmentName != null}? ${queue.departmentName} : ''"
+                                                    >
                                         </div>
+                                        <div th:if="${#fields.hasErrors('departmentName')}" th:errors="*{departmentName}" class="alert alert-danger" role="alert"/>
 
                                         <hr>
 
                                         <div class="row justify-content-around">
                                             <button  type="submit" class="btn btn-primary col-xl-4 col-md-6 mb-5">Edit</button>
-                                            <a> <div class="btn btn-danger  col-xl-4 col-md-6 mb-5" ><a>delete</a> </div></a>
+                                            <div class="btn btn-danger  col-xl-4 col-md-6 mb-5 ">
+                                                <a class="text-white" th:href="@{/taskQueues/delete/{id}(id=${queue.id})}">Delete</a>
+                                            </div>
                                         </div>
+
                                     </form>
+
+
                                 </div>
                             </div>
                         </div>
