--- a/src/main/resources/templates/user/userUpdate.html
+++ b/src/main/resources/templates/user/userUpdate.html
@@ -19,7 +19,7 @@
                             <div class="mt-4  small">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4" th:text="|Edit ${userToUpdate.getFirstName()} ${userToUpdate.getLastName()} task|"></h1>
+                                        <h1 class="h4 text-gray-900 mb-4" th:text="|Edit ${userToUpdate.getFirstName()} ${userToUpdate.getLastName()}|"></h1>
                                     </div>
                                     <form class="user" th:action="@{/users/update/{id}(id=${userToUpdate.id})}" method="post" th:object="${userToUpdate}">
                                         <div class="form-group">
@@ -28,6 +28,7 @@
                                                    name="firstName"
                                                    id="exampleInputFirstName" aria-describedby="firstNamelHelp"
                                                    placeholder="Enter first name..." th:value="${userToUpdate.getFirstName()}">
+                                            <div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" class="alert alert-danger" role="alert"/>
                                         </div>
 
 
@@ -36,6 +37,7 @@
                                             <p>
                                                 <textarea class="form-control" id="exampleInputLastName" name="lastName" placeholder="Last name" th:text="${userToUpdate.getLastName()}"></textarea>
                                             </p>
+                                            <div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="alert alert-danger" role="alert"/>
                                         </div>
 
                                         <div class="form-group">
@@ -44,6 +46,7 @@
                                                    name="email"
                                                    id="exampleInputEmail" aria-describedby="emailHelp"
                                                    placeholder="Enter email..." th:value="${userToUpdate.getEmail()}">
+                                            <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="alert alert-danger" role="alert"/>
                                         </div>
 
                                         <div class="form-group">
@@ -51,51 +54,39 @@
                                             <input type="text" class="form-control"
                                                    name="login"
                                                    id="exampleInputLogin" aria-describedby="firstNamelHelp"
-                                                   placeholder="Enter login..." th:value="${userToUpdate.getLogin()}">
+                                                   placeholder="Enter login..."
+                                                   th:value="${userToUpdate.getLogin()}">
+                                            <div th:if="${#fields.hasErrors('login')}" th:errors="*{login}" class="alert alert-danger" role="alert"/>
                                         </div>
 
                                         <div class="form-group">
-                                            <label for="rolesDataList" class="form-label">Roles</label>
-                                            <input
-                                                    class="form-control"
-                                                    list="rolesListOptions"
-                                                    id="rolesDataList"
-                                                    name="department"
-                                                    placeholder="Type to search department"
-                                                    th:value="${userToUpdate.role.getName()}">
-
-                                            <datalist id="rolesListOptions" >
-                                                <th:block th:each="role: ${userToUpdate.data.roles}">
-                                                    <option th:value="${role.getName()}"></option>
-                                                </th:block>
-                                            </datalist>
+                                            <label for="exampleInputRole" class="form-label">Role</label>
+                                            <input type="text" class="form-control"
+                                                   name="role"
+                                                   id="exampleInputRole" aria-describedby="firstNamelHelp"
+                                                   placeholder="Enter role..."
+                                                   th:value="${userToUpdate.getRole()}">
+                                            <div th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="alert alert-danger" role="alert"/>
                                         </div>
 
                                         <div class="form-group">
-                                            <label for="departmentDataList" class="form-label">Urgency</label>
-                                            <input
-                                                    class="form-control"
-                                                    list="departmentListOptions"
-                                                    id="departmentDataList"
-                                                    name="department"
-                                                    placeholder="Type to search department"
-                                                    th:value="${userToUpdate.department?.getName()}"
-                                                     >
-
-                                            <datalist id="departmentListOptions" >
-                                                <th:block th:each="department: ${userToUpdate.data.departments}">
-                                                    <option th:value="${department.getName()}"></option>
-                                                </th:block>
-                                            </datalist>
+                                            <label for="exampleInputDepartmentName" class="form-label">Department</label>
+                                            <input type="text" class="form-control"
+                                                   name="departmentName"
+                                                   id="exampleInputDepartmentName" aria-describedby="firstNameHelp"
+                                                   placeholder="Enter department name..."
+                                                   th:value="${userToUpdate?.getDepartmentName() != null} ? ${userToUpdate.getDepartmentName()} : ''">
+                                            <div th:if="${#fields.hasErrors('departmentName')}" th:errors="*{departmentName}" class="alert alert-danger" role="alert"/>
                                         </div>
-
-
 
                                         <hr>
 
                                         <div class="row justify-content-around">
                                             <button  type="submit" class="btn btn-primary col-xl-4 col-md-6 mb-5">Edit</button>
-                                            <a> <div class="btn btn-danger  col-xl-4 col-md-6 mb-5" ><a>delete</a> </div></a>
+
+                                            <div class="btn btn-danger  col-xl-4 col-md-6 mb-5 ">
+                                                <a class="text-white" th:href="@{/users/delete/{id}(id=${userToUpdate.id})}">Delete</a>
+                                            </div>
                                         </div>
                                     </form>
                                 </div>
